<resources>
    <!-- Strings related to my_profile_button -->
    <string name="app_name">"Cy's Rides"</string>
    <string name="calendar">Calendar</string>
    <string name="register">Register</string>
    <string name="login">Log in</string>
    <string name="logout">Logout</string>
    <string name="profile">My Profile</string>
    <string name="contacts">My Contacts</string>
    <string name="groups">My Groups</string>
    <string name="requests">Ride Requests</string>
    <string name="offers">Ride Offers</string>
    <string name="create_request">Create Ride Request</string>
    <string name="create_offer">Create Ride Offer</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login and registration-->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>
    <string name="register_caps">REGISTER</string>
    <string name="confirmation_code">Enter your confirmation code below: </string>
    <string name="go">GO</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="venmo">Venmo</string>
    <string name="profile_desc">Profile Description</string>
    <string name="user_type">Select whether you will be a driver or a passenger. Passengers can only request rides, and drivers can request and offer rides.</string>

    <!-- Strings related to ride requests and ride offers -->
    <string name="ride_offer">Ride Offer</string>
    <string name="ride_request">Ride Request</string>
    <string name="title_activity_ride_requests">Ride Requests</string>
    <string name="name">Name</string>
    <string name="destination">Destination (city, state)</string>
    <string name="cost">Ride Cost</string>
    <string name="description">Description</string>
    <string name="num_bags">Number of Bags</string>
    <string name="leave_date">Leave Date (mm/dd/yyyy)</string>
    <string name="leave_time">Leave Time</string>
    <string name="enter">Enter</string>
    <string name="submit">Submit</string>
    <string name="send">Send</string>
    <string name="join">Join Ride</string>
    <string name="join_driver">Join as Driver</string>
    <string name="requests_and_offers">View Requests and Offers</string>
    <string name="search">Search</string>
    <string name="message">Enter message</string>

    <!-- Strings related to profile -->
    <string name="large_text">
        "Material is the metaphor.\n\n"
        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    <string name="select_profile_picture">Select Profile Picture</string>
    <string name="create_profile_caps">CREATE PROFILE</string>
    <string name="driver">Driver</string>
    <string name="passenger">Passenger</string>
    </string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_view_profile">ViewProfile</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_create_profile">Create Profile</string>

    <!-- Strings related to banning -->
    <string name="ban_user">Ban User</string>
    <string name="banned_users">View Banned Users</string>
    <string name="email">Email</string>
    <string name="reason">Reason</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="debug">If you are seeing this then you accessed something you aren\'t supposed to see</string>
</resources>
