<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="cysrides.cysrides.CreateProfile">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="4dp"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="4dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/NetID"
            android:layout_width="match_parent"
            android:layout_height="43dp"
            android:layout_weight="1"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/Password"
            android:layout_width="match_parent"
            android:layout_height="43dp"
            android:layout_weight="1"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/First_Name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/first_name" />

        <EditText
            android:id="@+id/Last_Name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/last_name" />

        <EditText
            android:id="@+id/Venmo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/venmo" />

        <EditText
            android:id="@+id/Description"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/profile_desc"
            android:inputType="textMultiLine"
            tools:layout_editor_absoluteX="22dp"
            tools:layout_editor_absoluteY="117dp" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_weight="1"
            android:text="@string/user_type"
            android:textAlignment="viewStart"
            app:layout_constraintBottom_toTopOf="@+id/radioGroup"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout8"
            app:layout_constraintVertical_bias="1.0" />

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintBottom_toTopOf="@+id/createProfileButton"
            app:layout_constraintHorizontal_bias="0.052"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout8"
            app:layout_constraintVertical_bias="1.0">

            <RadioButton
                android:id="@+id/passengerRadioButton"
                android:layout_width="112dp"
                android:layout_height="wrap_content"
                android:text="Passenger" />

            <RadioButton
                android:id="@+id/driverRadioButton"
                android:layout_width="92dp"
                android:layout_height="wrap_content"
                android:text="Driver" />

        </RadioGroup>

        <Button
            android:id="@+id/createProfileButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_weight="1"
            android:text="@string/title_activity_create_profile"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.502"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout8"
            app:layout_constraintVertical_bias="1.0" />

    </LinearLayout>

</android.support.constraint.ConstraintLayout>